# unvibe

./: .gitignore  .unvibe.example.toml  Dockerfile  README.md  cmp.txt  compose.yaml  pyproject.toml
.github/workflows/: pip-install.yml
tests/: BaseTest.py  SearchTest.py  basic.py  lisp.py  test_TestCase.py  test_basic.py  test_core.py  test_counting_test_case.py  test_e2e.py  test_hard.py  test_magic_class.py  test_magic_function.py  test_mf.py  test_utils.py
tests_e2e/disk_cache/: disk_cache.py  test_disk_cache.py
tests_e2e/is_palindrome/: is_palindrome.py  test_is_palindrome.py
tests_e2e/lisp/: lisp.py  test_lisp.py
tests_e2e/lisp/src/: lisp.py
tests_e2e/lisp/tests/: test_lisp.py
tests_e2e/sqrt/: sqrt.py  test_sqrt.py
tests_e2e/sqrt/src/: sqrt.py
tests_e2e/sqrt/tests/: test_sqrt.py
unitai/: TestCase.py  __init__.py  __main__.py  ai.py  cli.py  config.py  core.py  log.py  magic.py  rand.py  test_sqrt.py  tree.html  tree.py
unittestai/: TestsContainer.py  __init__.py  __main__.py  ai.py  config.py  core.py  magic.py  rand.py  state.py  suite.py  ui.html  ui.py
unvibe/: __init__.py  __main__.py  ai.py  config.py  core.py  disk_cache.py  llm.py  log.py  magic.py  rand.py  state.py  suite.py  tests_container.py  ui.html  ui.py
