[project]
name = "unitai"
version = "0.1.0"
description = "Generate code from unit-tests"
authors = [
    {name = "Claudio Santini",email = "hireclaudio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "redis (>=5.2.1,<6.0.0)",
    "termcolor (>=2.5.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
