[project]
name = "unitai"
version = "0.1.0"
description = "Generate code from unit-tests"
authors = [
    {name = "Claudio Santini",email = "hireclaudio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "redis (>=5.2.1,<6.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "google-genai (>=1.2.0,<2.0.0)",
    "openai (>=1.64.0,<2.0.0)",
    "anthropic (>=0.46.0,<0.47.0)",
    "ollama (>=0.4.7,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unitai = "unitai.__main__:main"
